Report - Product Sale By Time
This report is comleted. Here, Authenticated user can see the total
product sale by selecting start date and ending date. This report will
help user to make decisions like discount or promotions on specific
products.

--- a/DensNDente Warehouse Management/DensNDente Warehouse Management/Style/MainStyle.css
+++ b/DensNDente Warehouse Management/DensNDente Warehouse Management/Style/MainStyle.css
@@ -7,33 +7,31 @@
 
 /*=8=8=8=      BUTTON      8=8=8=8*/
 
-input[type=text], input[type=email], textarea, select, input[type=password] {
+input[type=text], input[type=email], input[type=password], textarea, input[type=number],select {
+    border: 1px solid gray;
     padding: 5px 10px;
     outline: 0;
-    min-width:250px;
-    background: rgba(0, 0, 0, 0.07);
+    min-width: 250px;
     border-radius: 8px;
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12);
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12);
     -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12);
-    border: none;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    border-right: 1px solid rgba(255, 255, 255, 0.2);
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
     -o-transition: all 0.2s ease;
+    margin-left: 7px;
 }
 
-    input[type=text]:invalid, input[type=email]:invalid, input[type=password]:invalid {
+    input[type=text]:invalid, input[type=email]:invalid, input[type=password]:invalid, textarea:invalid input[type=number]:invalid,select:invalid {
         border-left: 5px solid #ed4e6e;
     }
 
-    input[type=text]:valid, input[type=email]:valid, input[type=password]:valid {
+    input[type=text]:valid, input[type=email]:valid, input[type=password]:valid, textarea:valid, input[type=number]:valid,select:valid {
         border-left: 5px solid #1b9bff;
     }
 
-    input[type="text"]:hover, input[type="email"]:hover, select:hover, input[type=password]:hover {
+    input[type="text"]:hover, input[type="email"]:hover, select:hover, input[type=password]:hover, textarea:hover, input[type=number]:hover {
         background: #fff;
         border-left: 5px solid #ed4e6e;
         transition: all 0.2s ease;
@@ -155,6 +153,10 @@ input[type=text], input[type=email], textarea, select, input[type=password] {
     border: 1px solid #1b9bff;
     border-bottom: 2px solid #1b9bff;
 }
+
+    .ctable tr td input[type=text] {
+        min-width: 80px;
+    }
 
     .ctable tr:hover td {
         color: #333;
